--- a/pages/application.css
+++ b/pages/application.css
@@ -1,10 +1,9 @@
 body{
     width: 95%;
     margin: auto;
-    background: url(fd.jpg);
+    background-color: blueviolet;
 
-    font-family: sens-serif;
-
+    font-family: sans-serif;
 
 
 }
