--- a/pages/application.css
+++ b/pages/application.css
@@ -1,7 +1,7 @@
 body{
     width: 95%;
     margin: auto;
-    background-color: blueviolet;
+    background-color: url(fd.jpg);
 
     font-family: sans-serif;
 
