--- a/pages/application.css
+++ b/pages/application.css
@@ -1,7 +1,7 @@
 body{
     width: 95%;
     margin: auto;
-    background-color: url("fd.jpg");
+    background-color: url(https://img.freepik.com/vetores-gratis/fundo-abstrato-colorido_23-2148807053.jpg?size=626&ext=jpg);
 
     font-family: sans-serif;
 
