--- a/pages/application.css
+++ b/pages/application.css
@@ -25,8 +25,8 @@ a{
     color: white;
 }
 
-h1{
-    text-align:center ;
+.h1{
+    text-align:center;
     margin-top: 100px;
 }
 
@@ -37,7 +37,7 @@ img{
 
 
 
-header{
+.header{
 
     background: rgb(176, 0, 211);
     display:flex;
@@ -47,18 +47,18 @@ header{
     padding: 20px;
 }
 
-menu{
+.menu{
 
-    display: flex;
+ display: flex;
 
 
 }
 
-menu li{
+.menu li{
     margin-left: 10px ;
 }
 
-menu li a{
+.menu li a{
     display: block;
     padding: 10px;
 
