--- a/pages/pages/style.css
+++ b/pages/pages/style.css
@@ -54,6 +54,9 @@ display: flex;
  .flex{
      display: flex;
      flex-wrap: wrap;
+     max-width: 800px;
+     margin: 0 auto;
+
  }
 
  .flex > div{
