--- a/pages/style.css
+++ b/pages/style.css
@@ -4,12 +4,23 @@ padding: 0px;
 list-style: none;
 font-size: 1.2rem;
 font-family: Arial;
-
+width: 100%;
+margin: auto;
+background: url(img/fd.jpg);
+background-repeat: no-repeat;
+background-attachment: fixed;
+background-size: cover;
+background-position: center center;
+background-color: black;
 }
 
 a{
     text-decoration: none;
     color: white;
+}
+
+body{
+    margin-bottom: 100px;
 }
 
 h1{
@@ -19,7 +30,7 @@ h1{
 }
 
 img{
-    max-width: 3%;
+    max-width: 100%;
     display: block;
 }
 
@@ -29,7 +40,8 @@ img{
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    padding: 20px;
+    
+    padding: 10px;
 
 }
 
@@ -46,8 +58,9 @@ display: flex;
 
 .menu li a {
     display: block;
-    padding: 10px;
-    background: coral;
+    padding: 5px;
+    background: rgb(126, 23, 243);
+
 }
 /*CSS FLEXBOX */
 
@@ -60,6 +73,50 @@ display: flex;
  }
 
  .flex > div{
-     flex: 1 1 10px;
+     flex: 1 1  200px;
      margin: 10px;
+ }
+
+
+ /*CSS Grid */
+
+ .grid1{
+     display: grid;
+    grid-template-columns: repeat(3, 1fr); 
+    max-width: 800px;
+    padding: 10px;
+    margin: 0 auto;
+    grid-gap: 20px;
+ }
+
+ .grid1 > div:nth-child(n + 4){
+
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 10px;
+    align-items:center;
+ }
+
+ .grid1 > div.anuncio{
+     grid-column: 1 ;
+     grid-row: 2/5;
+     border-top: 10px solid tomato;
+     display: block;
+
+ }
+ @media (max-width: 600px){
+
+    .grid1 {
+        grid-template-columns: 1fr 1fr;
+    }
+
+ .grid1 > div:nth-child(n + 4){
+
+    display: block;
+ }
+ .grid > div.anuncio{
+     grid-column: auto;
+     grid-row: auto;
+     order: -1;
+ }
  }
