--- a/pages/pag_modulos/style.css
+++ b/pages/pag_modulos/style.css
@@ -12,7 +12,7 @@ background-repeat: no-repeat;
 background-attachment: fixed;
 background-size: cover;
 background-position: center center;
-background-color: black;
+background-color: rgba(18, 40, 139, 0.733);
 }
 
 a{
