--- a/pages/pag_modulos/style.css
+++ b/pages/pag_modulos/style.css
@@ -7,7 +7,7 @@ font-family: Arial;
 
 width: 100%;
 margin: auto;
-background: url(img/fd.jpg);
+background: url(imge/fd.png);
 background-repeat: no-repeat;
 background-attachment: fixed;
 background-size: cover;
@@ -120,4 +120,77 @@ display: flex;
      grid-row: auto;
      order: -1;
  }
+
  }
+
+ /* Section  Grid 2*/
+
+ .grid2{
+
+    display: grid;
+    grid-template-columns: 1fr 200px;
+    grid-gap: 200px;
+    max-width: 800px;
+    padding: 10px;
+    margin: 0 auto;
+ }
+ .sidebar > div {
+margin-bottom: 10px;
+ }
+
+ @media (max-width: 600px){
+
+     .grid2{
+         grid-template-columns: 1fr;
+     }
+     .sidebar {
+         display:flex;
+         overflow: scroll;
+     }
+     .sidebar > div {
+         flex: 1 0 200px;
+         margin: 0 10px;
+
+     }
+ }
+ 
+/* Section Grid 3*/
+
+.grid3{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 20px;
+    margin:  0 auto;
+    max-width: 800px;
+    padding: 10px;
+}
+
+.grid3-itens:nth-child(1) {
+    grid-row: 1/3;
+}
+
+.grid3-itens{
+  display: grid;
+  align-self: end;
+}
+
+
+.grid3-itens
+ img{
+    grid-column: 1;
+    grid-row: 1/3;
+    align-self: end;
+  }
+
+.grid3-itens p{
+    background: rgba(0,0,0,0.6);
+    padding: 10px;
+    color: white;
+    grid-column: 1;
+    grid-row: 2;
+    align-self: end;
+  }
+  
+  
+  
+  
