--- a/pages/pag_modulos/style.css
+++ b/pages/pag_modulos/style.css
@@ -7,7 +7,7 @@ font-family: Arial;
 
 width: 100%;
 margin: auto;
-background: url(imge/fd.png);
+background: url(imge/speed-light-and-spotlights-digital-background/fdt.jpg);
 background-repeat: no-repeat;
 background-attachment: fixed;
 background-size: cover;
