--- a/pages/pag_curso/portf.css
+++ b/pages/pag_curso/portf.css
@@ -11,7 +11,7 @@ body{
 .header-conteiner{
     height: 100vh;
     width: 100vw;
-    background-color: aqua;
+    background-color: rgba(111, 0, 255, 0.89);
     background-image: url(img/fd.jpg);
     background-repeat: no-repeat;
     background-size: contain;
@@ -44,9 +44,9 @@ display: flex;
 }
 .social-media a {
     text-decoration: none;
-    color: #ffff;
+    color: #1E1E1A;
     padding: 1rem 4rem;
-    border: 1px solid  #1d5be2;
+    border: 1px solid  #1E1E1A;
     min-width: 4rem;
     display: flex;
     align-items: center;
@@ -55,7 +55,7 @@ display: flex;
 }
 
 a:hover{
-    background-color: #6508df46;
+    background-color: #660abb88;
 }
 
 /* Menu Hamburger*/
@@ -85,7 +85,7 @@ a:hover{
     background-color: #da0499;
     position: absolute;
     border-radius: 4px;
-    transition: 0.5s ease-in-out;
+    transition: .5s ease-in-out;
 }
 
 .checkbox .trace:nth-child(1){
@@ -116,9 +116,9 @@ a:hover{
     height: 4px;
     width: 10px;
     border-radius: 50%;
-    box-shadow: 0px 0px 0px 0px #ffff;
+    box-shadow: 0px 0px 0px 0px #ffffff;
     z-index: -1;
-    transition: 400px ease-in-out 0s;
+    transition: 400ms ease-in-out 0s;
 
 }
 
@@ -134,7 +134,7 @@ a:hover{
     z-index: 2;
     opacity: 0;
     visibility: hidden;
-    transition: 400px ease-in-out 0s;
+    transition: 400ms ease-in-out 0s;
 }
 
 .menu-itens ul{
@@ -151,18 +151,18 @@ a:hover{
 
 /* ANIMAÇÃO DO MENU*/
 
-#toglle:checked + .checkbox .trace:nth-child(1){
+#toggle:checked + .checkbox .trace:nth-child(1){
     transform: rotate(45deg);
     top: 47px;
 
 }
-#toglle:checked + .checkbox .trace:nth-child(2){
+#toggle:checked + .checkbox .trace:nth-child(2){
 transform: translate(-100px);
 width: 30px;
 visibility: hidden;
 opacity: 0;
 }
-#toglle:checked + .checkbox .trace:nth-child(3){
+#toggle:checked + .checkbox .trace:nth-child(3){
     transform: rotate(-45deg);
     top: 48px;
 }
@@ -171,7 +171,7 @@ opacity: 0;
     background-color: #ffff;
 }
 
-#toggle:checked~.menu{
+#toggle:checked ~.menu{
 
     box-shadow: 0px 0px 0px 100vmax #ffff;
     z-index: 1;
@@ -179,4 +179,5 @@ opacity: 0;
 #toggle:checked ~ .menu-itens{
     visibility: visible;
     opacity: 1;
+    
 }
