--- a/desenvolvimento web/disney-plus/test01.css
+++ b/desenvolvimento web/disney-plus/test01.css
@@ -1,11 +1,17 @@
 *{
     margin: 0;
-    padding: 0;
+    padding: 0; 
 
 }
 
 
 body{
 background: url(".jpg") no-repeat center center;
+background-size: cover ;
 
 }
+
+.h1{
+    
+}
+
