--- a/desenvolvimento web/treino_pag/guanabara.css
+++ b/desenvolvimento web/treino_pag/guanabara.css
@@ -1,37 +1,133 @@
- body, li, p{
-    
-   list-style: none;
-   font-size: 1.2rem;
-   padding: auto;
-   margin: auto;
- 
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=IBM+Plex+Serif:wght@200&family=Roboto:ital,wght@1,100&display=swap');
 
+* {
+
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html {
+    font-size: 10px;
+    font-family: 'Montserrat', sans-serif;
+}
+
+a {
+    text-decoration: none;
+}
+
+.conteiner {
+    min-height: 100vh;
     width: 100%;
-    margin: auto;
-    background: url(img/fd.jpg);
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+
+#hero{
+    background-image: url(img/drn.jpg);
     background-size: cover;
-    background-position: center center;
+    background-position: top center;
+    position: relative;
+    z-index: 1;
+}
+
+#hero::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
     background-color: black;
+    opacity: .7;
+    z-index: -1;
 
-    font-family: sans-serif;
+}
+
+#hero h1 {
+    display: block;
+    width: fit-content;
+    font-size: 4rem;
+    position: relative;
+    color: transparent;
+    animation: text_reveal 1s ease forwards;
+    animation-delay: 1s;
+}
+
+#hero h1:nth-child(1) {
+    animation-delay: 1s;
+}
+
+#hero h1:nth-child(2) {
+    animation-delay: 2s;
+}
+
+#hero h1:nth-child(3) {
+    animation-delay: 3s;
+}
+
+#hero h1 span {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 0;
+    background-color: crimson;
+    animation: text_reveal_box 1s ease;
+    animation-delay: .3s;
+}
+
+#hero h1:nth-child(1) span {
+    animation-delay: 1s;
+}
+
+#hero h1:nth-child(2) span {
+    animation-delay: 2s;
+}
+
+#hero h1:nth-child(3) span {
+    animation-delay: 3s;
+}
+
+
+#hero .cta {
+    display: inline-block;
+    padding: 10px 30px;
     color: white;
+    background-color: transparent;
+    border: 2px solid crimson;
+    font-size: 2rem;
+    text-transform: uppercase;
+    letter-spacing: .1rem;
+    margin-top: 30px;
+    transition: .3s ease background-color;
+    transition-property: background-color, color;
 }
 
-a{
-
-    list-style: none;
-    color: rgb(255, 255, 255);
+#hero .cta:hover {
+    color: white;
+    background-color: crimson;
 }
 
-.h1{
-    
+@keyframes text_reveal_box {
+
+    50% {
+        width: 100%;
+        left: 0;
+
+    }
+
+    100% {
+        width: 0;
+        left: 100%;
+    }
 }
 
-
-img{
-    max-width: 30%;
-    display: table-footer-group;
+@keyframes text_reveal {
+    100% {
+        color: white;
+    }
 }
-
