--- a/desenvolvimento web/treino_pag/guanabara.css
+++ b/desenvolvimento web/treino_pag/guanabara.css
@@ -26,7 +26,7 @@ a {
 }
 
 
-#hero{
+#hero {
     background-image: url(img/drn.jpg);
     background-size: cover;
     background-position: top center;
@@ -47,6 +47,14 @@ a {
 
 }
 
+#hero .hero {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 50px;
+    justify-content: flex-start;
+
+}
+
 #hero h1 {
     display: block;
     width: fit-content;
@@ -54,7 +62,7 @@ a {
     position: relative;
     color: transparent;
     animation: text_reveal 1s ease forwards;
-    animation-delay: 1s;
+    animation-delay: 1ss;
 }
 
 #hero h1:nth-child(1) {
@@ -66,6 +74,7 @@ a {
 }
 
 #hero h1:nth-child(3) {
+    animation: text_reveal_name .5s ease forwards;
     animation-delay: 3s;
 }
 
@@ -77,19 +86,19 @@ a {
     width: 0;
     background-color: crimson;
     animation: text_reveal_box 1s ease;
-    animation-delay: .3s;
+    animation-delay: .5s;
 }
 
 #hero h1:nth-child(1) span {
-    animation-delay: 1s;
+    animation-delay: .5s;
 }
 
 #hero h1:nth-child(2) span {
-    animation-delay: 2s;
+    animation-delay: 1.5s;
 }
 
 #hero h1:nth-child(3) span {
-    animation-delay: 3s;
+    animation-delay: 2.5s;
 }
 
 
@@ -112,6 +121,55 @@ a {
     background-color: crimson;
 }
 
+#services {}
+
+#services .services {
+    flex-direction: column;
+    text-align: center;
+    max-width: 1500px;
+    margin: 0 auto;
+    padding: 100px;
+
+}
+
+#services .section-title {
+    font-size: 4rem;
+    font-weight: 300px;
+    color: black;
+    margin-bottom: 10px;
+    text-transform: uppercase;
+    letter-spacing: .2rem;
+    text-align: center;
+}
+#services .section-title span{
+    color: crimson;
+}
+
+#services .service-top p{
+font-size:  1.4rem;
+margin-top: 5px;
+line-height: 2.5rem;
+font-weight: 300px;
+letter-spacing: .05rem;
+}
+#service .service-bottom{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+#services .services-item{
+    flex-basis: 80%;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: column;
+    padding: 30%;
+    border-radius: 10px;
+    background-image: url(img/drn.jpg);
+    background-size: cover;
+    margin: 10px 5%;
+}
 @keyframes text_reveal_box {
 
     50% {
@@ -129,5 +187,12 @@ a {
 @keyframes text_reveal {
     100% {
         color: white;
+    }
+}
+
+@keyframes text_reveal_name {
+    100% {
+        color: crimson;
+        font-weight: 500;
     }
 }
