--- a/desenvolvimento web/treino_pag/cont.css
+++ b/desenvolvimento web/treino_pag/cont.css
@@ -1,40 +1,73 @@
 /* Select univers*/
 * {
-    margin: 0;
+    margin: 0px;
     padding: 0;
+    box-sizing: border-box;
+
+    font-family: sans-serif;
 
 }
 
 body {
-    height: 100%;
-    width: 100%;
-    background-image: url(img/drn.jpg);
+    height: 100vh;
+    margin: 10px;
+    margin-top: 5%;
+    background-image: url(img/no_matches_by_lacza_dcbux4v.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center center bottom;
+    background-position: center;
     background-color: black;
-  
-
+    color: white;
 }
 
-
-
-h1,
-p {
-
-    margin-top: 30px;
+h1 {
+    margin-top: 5%;
     text-align: center;
-    color: rgb(248, 248, 250);
-    font-size: medium;
+    line-height: 1.5;
 }
 
-.conteiner {
-    margin: 10px;
-    padding: 10px;
-    border-color: rgba(17, 15, 15, 0);
-    background-color: rgba(0, 0, 0, 0.589);
-    border-radius: 15px;
-    border-style: dotted;
-    border-width: medium;
+p {
+    margin-top: 55px;
+    text-align: center;
+}
 
+.cursor{
+    position: absolute;
+    left: 0;
+    top: 0;
+    border: 1.5px solid white;
+    width: 30px;
+    border-radius: 50px;
+    transform: translate(-50%, -50%);
+
+}
+.cursor::after{
+    content: '';
+    position: absolute;
+    width: 5PX;
+    height: 5PX;
+    left: 50%;
+    transform: translate(-50%, 50%);
+    background-color: white;
+    border-radius: 50px;
+
+}
+
+.cursor::before{
+    background-color: red;
+    transform: translate(-50%, -50%) scale(3);
+}
+.cursor::before{
+animation: click 1s ease-in-out forwards;
+
+}
+@keyframes clik{
+    0%{
+        opacity: 1;
+        transform: translate(-50%, -50%) scale(1);
+    }
+    100%{
+        opacity: 0;
+        transform: translate(-50%, -50%) scale(5);
+}
 }
