--- a/desenvolvimento web/portfolio/portf.css
+++ b/desenvolvimento web/portfolio/portf.css
@@ -1,5 +1,4 @@
-
-body{
+body {
 
     list-style: none;
     font-size: 1rem;
@@ -7,20 +6,17 @@ body{
     margin: 0px;
     font-family: sans-serif;
     color: #1956fd
-    
 }
 
 /* HEADER */
 
-.header-conteiner{
+.header-conteiner {
     height: 100vh;
     width: 100vw;
-    background-color: rgba(111, 0, 255, 0.89);
-    background-image: url(img/fd.jpg);
+    background-image: url(img/thema.jpg);
     background-repeat: no-repeat;
-    background-attachment: fixed;
     background-size: cover;
-    background-position: center center;
+    background-position: center 0;
     background-color: black;
 
     display: flex;
@@ -30,30 +26,31 @@ body{
     box-sizing: border-box;
     padding: 0 112px;
     position: relative;
-    
+
 }
 
-.h1{
+.h1 {
     font-size: 50px;
     text-transform: uppercase;
     letter-spacing: 4px;
 }
 
-.h2{
+.h2 {
     text-transform: uppercase;
     letter-spacing: 4px;
 }
 
 
-.social-media{
-margin-top: 1rem;
-display: flex;
+.social-media {
+    margin-top: 1rem;
+    display: flex;
 }
+
 .social-media a {
     text-decoration: none;
     color: #ffffff;
     padding: 1rem 4rem;
-    border: 1px solid  #1956fd;
+    border: 1px solid #1956fd;
     min-width: 4rem;
     display: flex;
     align-items: center;
@@ -61,19 +58,20 @@ display: flex;
     transition: .5s ease-in-out;
 }
 
-a:hover{
-    background-color: #1956fd6c;;
+a:hover {
+    background-color: #1956fd6c;
+    ;
 }
 
 /* Menu Hamburger*/
 
-.checkbox-conteiner{
+.checkbox-conteiner {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.checkbox{
+.checkbox {
     height: 100px;
     width: 100px;
     position: absolute;
@@ -86,36 +84,39 @@ a:hover{
     transition: 400ms ease-in-out 0s;
 }
 
-.checkbox .trace{
+.checkbox .trace {
     width: 50px;
     height: 2px;
-    background-color: #1956fd;;
+    background-color: #1956fd;
+    ;
     position: absolute;
     border-radius: 4px;
     transition: .5s ease-in-out;
 }
 
-.checkbox .trace:nth-child(1){
+.checkbox .trace:nth-child(1) {
     top: 26px;
     transform: rotate(0);
 }
-.checkbox .trace:nth-child(2){
+
+.checkbox .trace:nth-child(2) {
     top: 46px;
     transform: rotate(0);
 }
 
-.checkbox .trace:nth-child(3){
+.checkbox .trace:nth-child(3) {
     top: 66px;
     transform: rotate(0);
 }
 
-#toggle{
+#toggle {
     display: none;
 }
+
 /* Menu */
 
 
-.menu{
+.menu {
     position: absolute;
     top: 28px;
     right: 38px;
@@ -129,8 +130,8 @@ a:hover{
 
 }
 
-.menu-itens{
-    position:fixed;
+.menu-itens {
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
@@ -144,7 +145,7 @@ a:hover{
     transition: 400ms ease-in-out 0s;
 }
 
-.menu-itens ul{
+.menu-itens ul {
     list-style-type: none;
 }
 
@@ -159,48 +160,52 @@ a:hover{
 
 /* ANIMAÇÃO DO MENU*/
 
-#toggle:checked + .checkbox .trace:nth-child(1){
+#toggle:checked+.checkbox .trace:nth-child(1) {
     transform: rotate(45deg);
     top: 47px;
 
 }
-#toggle:checked + .checkbox .trace:nth-child(2){
-transform: translate(-100px);
-width: 30px;
-visibility: hidden;
-opacity: 0;
+
+#toggle:checked+.checkbox .trace:nth-child(2) {
+    transform: translate(-100px);
+    width: 30px;
+    visibility: hidden;
+    opacity: 0;
 }
-#toggle:checked + .checkbox .trace:nth-child(3){
+
+#toggle:checked+.checkbox .trace:nth-child(3) {
     transform: rotate(-45deg);
     top: 48px;
 }
 
-#toggle:checked + .checkbox{
+#toggle:checked+.checkbox {
     background-color: rgba(26, 25, 25, 0.137);
 }
 
-#toggle:checked ~.menu{
+#toggle:checked~.menu {
 
     box-shadow: 0px 0px 0px 100vmax rgba(22, 22, 22, 0.281);
     z-index: 1;
 }
-#toggle:checked ~ .menu-itens{
+
+#toggle:checked~.menu-itens {
     visibility: visible;
     opacity: 1;
-    
+
 }
 
 /*Cards*/
 
-.container{
- height: auto;
- width: 100%;
- display: flex;
- flex-direction: column;
- justify-content: space-evenly;
- margin: 3rem 0;
+.container {
+    height: auto;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    margin: 3rem 0;
 }
-.card-container{
+
+.card-container {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -208,7 +213,7 @@ opacity: 0;
 
 }
 
-.card{
+.card {
     width: 300px;
     height: 300px;
     border-radius: 100%;
@@ -227,13 +232,13 @@ opacity: 0;
     transition: 0.5s ease-in-out;
 }
 
-.card-text{
+.card-text {
     width: 40%;
     letter-spacing: 1px;
     color: rgb(109, 109, 109);
 }
 
-.card-wrapper{
+.card-wrapper {
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -242,7 +247,7 @@ opacity: 0;
     position: relative;
 }
 
-.card-wrapper::before{
+.card-wrapper::before {
     content: '';
     position: absolute;
     height: 100px;
@@ -254,7 +259,7 @@ opacity: 0;
     transition: 0.5s ease-in-out;
 }
 
-.card-wrapper h2{
+.card-wrapper h2 {
     font-size: 40px;
     text-transform: uppercase;
     letter-spacing: 4px;
@@ -262,7 +267,7 @@ opacity: 0;
     transition: 0.5s ease-in-out;
 }
 
-.card-wrapper p{
+.card-wrapper p {
     font-size: 0;
     visibility: visible;
     opacity: 0;
@@ -275,19 +280,19 @@ opacity: 0;
     filter: unset;
 }
 
-.card:hover > .card-wrapper::before{
+.card:hover>.card-wrapper::before {
     height: 250px;
     width: 250px;
     opacity: 1;
 }
 
-.card:hover > .card-wrapper p{
+.card:hover>.card-wrapper p {
     opacity: 1;
     visibility: visible;
     font-size: 14px;
 }
 
-.footer{
+.footer {
     width: 100%;
     height: 100px;
     background-color: #1956fd;
