--- a/desenvolvimento web/port2/port.css
+++ b/desenvolvimento web/port2/port.css
@@ -25,9 +25,23 @@ a {
 
 }
 
+img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+p {
+    color: black;
+    font-size: 1.4rem;
+    margin-top: 5px;
+    line-height: 2.5rem;
+    font-weight: 300px;
+    letter-spacing: .05rem;
+}
 
 #hero {
-    background-image: url(img/drn.jpg);
+    background-image: url(img/fd.jpg);
     background-size: cover;
     background-position: top center;
     position: relative;
@@ -121,14 +135,13 @@ a {
     background-color: crimson;
 }
 
-#services {}  
 
 #services .services {
     flex-direction: column;
     text-align: center;
     max-width: 1500px;
     margin: 0 auto;
-    padding: 100px;
+    padding: 100px 0;
 
 }
 
@@ -141,56 +154,68 @@ a {
     letter-spacing: .2rem;
     text-align: center;
 }
-#services .section-title span{
+
+#services .section-title span {
     color: crimson;
 }
 
-#services .service-top p{
-font-size:  1.4rem;
-margin-top: 5px;
-line-height: 2.5rem;
-font-weight: 300px;
-letter-spacing: .05rem;
-}
-#service .service-bottom{
+#services .service-bottom {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
+    margin-top: 50px;
 }
-#services .services-item{
+
+#services .services-item {
     flex-basis: 80%;
     display: flex;
     align-items: flex-start;
     justify-content: center;
     flex-direction: column;
-    padding: 30%;
+    padding: 30px;
     border-radius: 10px;
     background-image: url(img/drn.jpg);
     background-size: cover;
     margin: 10px 5%;
     position: relative;
     z-index: 1;
+    overflow: hidden;
 }
+
 #services .services-item::after {
-    counter-reset: '';
+    content: '';
     position: absolute;
     left: 0;
+    top: 0;
     height: 100%;
     width: 100%;
-    background-color: black;
+    background-color: linear-gradient(60deg, #29323c 0%, #485563 100%);
     opacity: .8;
     z-index: -1;
-    
-
 }
-.service .col-rigth .icom {
+
+#services .col-rigth .icom {
     height: 80px;
     width: 80px;
     margin-bottom: 20px;
 
 }
 
+#services .service-item h2 {
+    font-size: 2rem;
+    color: white;
+    margin-bottom: 10px;
+    text-transform: uppercase;
+
+}
+
+#services .service-item p{
+    color: white;
+    text-align: left;
+    font-size: 1.4rem;
+    line-height: 1.9rem;
+}
 
 @keyframes text_reveal_box {
 
