--- a/desenvolvimento web/cadastro dev/styleb.css
+++ b/desenvolvimento web/cadastro dev/styleb.css
@@ -2,7 +2,8 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-image: linear-gradient(to right, rgb(20, 147, 220) rgb(18, 58, 77));
+    
+    background-image: linear-gradient(to right, rgb(20, 147, 220), rgb(18, 58, 77));
 
 }
 
@@ -13,13 +14,13 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(0, 0, 0, 0.6);
     padding: 15px;
     border-radius: 15px;
     width: 20%;
 }
 
-fieldset {
+fieldset{
     border: 3px solid dodgerblue;
 }
 
@@ -39,7 +40,7 @@ legend {
 .inputUser{
     background: none;
     border: none;
-    border-bottom: 1px soloid white;
+    border-bottom: 1px solid white;
     outline: none;
     color: white;
     font-size: 15px;
@@ -82,6 +83,6 @@ legend {
 
 
 }
-#submit::hover{
-    background-image: linear-gradient(to right, rgb(0,80,197), rgb(80,19, 195));
+#submit:hover{
+    background-image: linear-gradient(to right, rgb(0,90,205), rgb(80,19, 190));
 }
