--- a/style.css
+++ b/style.css
@@ -13,6 +13,6 @@ body{
     width: 100%;
     height: 100%;
     min-height: 100vh;
-    background: radial-gradient(rgb(24, 9, 243),20%, black);
+    background: radial-gradient(rgb(219, 194, 52),20%, rgb(247, 100, 2));
     position: relative;
 }
