--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body{
     overflow-x: hidden;
 }
 
+/*menu-bar*/
 .main-width{
     width: 1400px;
     max-width: 95%;
@@ -39,6 +40,7 @@ body{
 nav ul li{
     list-style: none;
     display: inline-block;
+    flex-wrap: wrap;
 }
 nav ul li a{
     text-decoration: none;
@@ -46,4 +48,37 @@ nav ul li a{
     margin-left: 60px;
     font-size: 15px;
     font-weight: 600;
+    border-bottom: 2px solid transparent;
+    transition: .4s;
+}
+nav ul li:not(:last-child) a:hover,
+nav ul li:not(:last-child) a:focus {
+    border-bottom: 2px solid white;
+}
+
+nav ul li.active a { 
+    border-bottom:2px solid white; ;
+}
+nav ul li.btn a{
+    background: transparent;
+    color:white;
+    border: 1px solid #f5dca8;
+    padding: 9px 20px;
+    border-radius: 30px;
+    line-height: 1.4;
+    font-size:14px;
+    font-weight: 300;
+    margin-left: 150px;
+}
+nav ul li.btn:hover a{
+border: 1px solid white;
+color: black;
+background: white;
+transition: .4s;
+}
+@media screen and(max-width:768px) {
+       body{
+        max-width: 100vh; 
+        max-height: 100vh;
+       }
 }
