--- a/web-site/flexbox_grid/pag.css
+++ b/web-site/flexbox_grid/pag.css
@@ -1,131 +1,97 @@
-body, ul, li, p{
-margin: 0px;
-padding: 0px;
-list-style: none;
-font-size: 1.2rem;
-font-family: Arial;
-
-width: 100%;
-margin: auto;
-background: url(imge/speed-light-and-spotlights-digital-background/fdt.jpg);
-background-repeat: no-repeat;
-background-attachment: fixed;
-background-size: cover;
-background-position: center center;
-background-color: rgba(24, 38, 49, 0.733);
-}
-
-a{
-    text-decoration: none;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
     color: white;
 }
-
-body{
-    margin-bottom: 100px;
+body {
+    background: radial-gradient(rgb(28, 28, 196), 30%, black);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+/*menu-bar*/
+.header{
+    width: 1400px;
+    max-width: 95%;
+    margin: 0 auto;
 }
 
-h1{
 
+/*CSS FLEXBOX */
+
+h1 {
     text-align: center;
     margin-top: 100px;
 }
-
-img{
+img {
     max-width: 100%;
     display: block;
 }
-
-.header {
-    background: rgb(25, 9, 90);
-    display:flex;
+.flex {
+    display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    
-    padding: 10px;
+    max-width: 800px;
+    margin: 0 auto;
 
 }
 
-.menu{
-display: flex;
-
-
-}Daniel Santos
-
-.menu li{
- margin-left: 10px;
-
+.flex>div {
+    flex: 1 1 200px;
+    margin: 10px;
 }
 
-.menu li a {
-    display: block;
-    padding: 5px;
-    background: rgb(25, 9, 90);
-
-}
-/*CSS FLEXBOX */
-
- .flex{
-     display: flex;
-     flex-wrap: wrap;
-     max-width: 800px;
-     margin: 0 auto;
-
- }
-
- .flex > div{
-     flex: 1 1  200px;
-     margin: 10px;
- }
 
 
- /*CSS Grid */
+/*CSS Grid */
 
- .grid1{
-     display: grid;
-    grid-template-columns: repeat(3, 1fr); 
+.grid1 {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     max-width: 800px;
     padding: 10px;
     margin: 0 auto;
     grid-gap: 20px;
- }
+}
 
- .grid1 > div:nth-child(n + 4){
+.grid1>div:nth-child(n + 4) {
 
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 10px;
-    align-items:center;
- }
+    align-items: center;
+}
 
- .grid1 > div.anuncio{
-     grid-column: 1 ;
-     grid-row: 2/5;
-     border-top: 10px solid tomato;
-     display: block;
+.grid1>div.anuncio {
+    grid-column: 1;
+    grid-row: 2/5;
+    border-top: 10px solid tomato;
+    display: block;
 
- }
- @media (max-width: 600px){
+}
+
+@media (max-width: 600px) {
 
     .grid1 {
         grid-template-columns: 1fr 1fr;
     }
 
- .grid1 > div:nth-child(n + 4){
+    .grid1>div:nth-child(n + 4) {
 
-    display: block;
- }
- .grid > div.anuncio{
-     grid-column: auto;
-     grid-row: auto;
-     order: -1;
- }
+        display: block;
+    }
 
- }
+    .grid>div.anuncio {
+        grid-column: auto;
+        grid-row: auto;
+        order: -1;
+    }
 
- /* Section  Grid 2*/
+}
 
- .grid2{
+/* Section  Grid 2*/
+
+.grid2 {
 
     display: grid;
     grid-template-columns: 1fr 200px;
@@ -133,34 +99,37 @@ display: flex;
     max-width: 800px;
     padding: 10px;
     margin: 0 auto;
- }
- .sidebar > div {
-margin-bottom: 10px;
- }
+}
 
- @media (max-width: 600px){
+.sidebar>div {
+    margin-bottom: 10px;
+}
 
-     .grid2{
-         grid-template-columns: 1fr;
-     }
-     .sidebar {
-         display:flex;
-         overflow: scroll;
-     }
-     .sidebar > div {
-         flex: 1 0 200px;
-         margin: 0 10px;
+@media (max-width: 600px) {
 
-     }
- }
- 
+    .grid2 {
+        grid-template-columns: 1fr;
+    }
+
+    .sidebar {
+        display: flex;
+        overflow: scroll;
+    }
+
+    .sidebar>div {
+        flex: 1 0 200px;
+        margin: 0 10px;
+
+    }
+}
+
 /* Section Grid 3*/
 
-.grid3{
+.grid3 {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 20px;
-    margin:  0 auto;
+    margin: 0 auto;
     max-width: 800px;
     padding: 10px;
 }
@@ -169,28 +138,23 @@ margin-bottom: 10px;
     grid-row: 1/3;
 }
 
-.grid3-itens{
-  display: grid;
-  align-self: end;
+.grid3-itens {
+    display: grid;
+    align-self: end;
 }
 
 
-.grid3-itens
- img{
+.grid3-itens img {
     grid-column: 1;
     grid-row: 1/3;
     align-self: end;
-  }
+}
 
-.grid3-itens p{
-    background: rgba(0,0,0,0.6);
+.grid3-itens p {
+    background: rgba(0, 0, 0, 0.6);
     padding: 10px;
     color: white;
     grid-column: 1;
     grid-row: 2;
     align-self: end;
-  }
-  
-  
-  
-  
+}
