--- a/web-site/style.css
+++ b/web-site/style.css
@@ -2,11 +2,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: monospace;
     color: white;
 }
 body {
-    background: url(https://i.gifer.com/origin/e7/e7e91734f41de0b03f75dbce3ceab480.gif);
+    background: radial-gradient(blue,50px, black);
     background-size: cover;
     background-size: auto;
     background-attachment: fixed;
@@ -20,7 +20,60 @@ body {
 
 
 /*CSS FLEXBOX */
+.container {
+    position: relative;
+    width: 1100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 30px;
+}
+.container .card{
+    position: relative;
+    max-width: 300px;
+    height: 215px;
+    background: rgba(255, 255, 255, 0.664);
+    margin: 30px 10px;
+    padding: 20px 15px;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0 5px 20px rgba(7, 238, 255, 0.938);
+    transform: 0.3s ease-in-out;
+}
+.container .card:hover{
+    height: 420px;
+}
+.container .card .imgBx{
+    position: relative;
+    width: 260px;
+    height: 260px;
+    top: -60px;
+    left: 5px;
+    z-index: 1;
+    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.2);
+}
+.container .card .imgBx img{
+    max-width: 100%;
+    border-radius: 4px;
+}
+.container .card .content{
+    position: relative;
+    margin-top: -140px;
+    padding: 10px 15px;
+    text-align: center;
+    color: rgb(204, 23, 23);
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.3s ease-in-out;
 
+}
+.container .card .content:hover{
+    visibility: visible;
+    opacity: 1;
+    margin-top: -40px;
+    transition-delay: 0.3s;
+}
 h1 {
     text-align: center;
     margin-top: 100px;
