--- a/web-site/style.css
+++ b/web-site/style.css
@@ -5,21 +5,91 @@
     font-family: monospace;
     color: white;
 }
+
 body {
-    background: radial-gradient(blue,50px, black);
-    background-size: cover;
-    background-size: auto;
+    background: url(https://i.pinimg.com/originals/4a/aa/de/4aaade9c445949aeb401a28deff935f1.gif);
     background-attachment: fixed;
+    background-size: cover;
 }
 /*menu-bar*/
-.header{
+.main-width {
     width: 1400px;
     max-width: 95%;
     margin: 0 auto;
 }
 
+.hero {
 
-/*CSS FLEXBOX */
+    position: relative;
+}
+
+.hero header .logo h2 a {
+    display: block;
+    font-size: 32px;
+    font-weight: 600;
+    text-decoration: none;
+    color: white;
+}
+
+.hero header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 40px 0 30px;
+}
+
+nav ul li{
+    list-style: none;
+    display: inline-block;
+    flex-wrap: wrap;
+}
+
+nav ul li a{
+    text-decoration: none;
+    color: white;
+    margin-left: 15px;
+    font-size: 15px;
+    font-weight: 600;
+    border-bottom: 2px solid transparent;
+    transition: .4s;
+}
+
+nav ul li:not(:last-child) a:hover,
+nav ul li:not(:last-child) a:focus {
+    border-bottom: 2px solid white;
+}
+
+nav ul li.active a{
+    border-bottom: 2px solid white;
+}
+
+nav ul li.btn a {
+    background: transparent;
+    color: white;
+    border: 1px solid white;
+    padding: 9px 20px;
+    border-radius: 30px;
+    line-height: 1.4;
+    font-size: 14px;
+    font-weight: 300;
+    margin-left: 150px;
+}
+
+nav ul li.btn:hover a{
+    border: 2px solid white;
+    color: black;
+    background: white;
+    transition: .4s;
+} 
+
+/*Card animation*/
+.card-container {
+    display: flex;
+    flex-direction: row;
+    margin-top: 100px;
+    margin-bottom: 250px;
+}
+
 .container {
     position: relative;
     width: 1100px;
@@ -29,11 +99,12 @@ body {
     flex-wrap: wrap;
     padding: 30px;
 }
-.container .card{
+
+.container .card {
     position: relative;
     max-width: 300px;
     height: 215px;
-    background: rgba(255, 255, 255, 0.664);
+    background: rgb(255, 255, 255);
     margin: 30px 10px;
     padding: 20px 15px;
     display: flex;
@@ -41,10 +112,12 @@ body {
     box-shadow: 0 5px 20px rgba(7, 238, 255, 0.938);
     transform: 0.3s ease-in-out;
 }
-.container .card:hover{
+
+.container .card:hover {
     height: 420px;
 }
-.container .card .imgBx{
+
+.container .card .imgBx {
     position: relative;
     width: 260px;
     height: 260px;
@@ -53,35 +126,42 @@ body {
     z-index: 1;
     box-shadow: 0 5px 20px rgba(0, 0, 0, 0.2);
 }
-.container .card .imgBx img{
+
+.container .card .imgBx img {
     max-width: 100%;
-    border-radius: 4px;
+    border-radius: 6px;
 }
-.container .card .content{
+
+.container .card .content {
     position: relative;
     margin-top: -140px;
     padding: 10px 15px;
     text-align: center;
-    color: rgb(204, 23, 23);
+    color: rgb(12, 11, 11);
     visibility: hidden;
     opacity: 0;
     transition: 0.3s ease-in-out;
 
 }
-.container .card .content:hover{
+
+.container .card .content:hover {
     visibility: visible;
     opacity: 1;
-    margin-top: -40px;
+    margin-top: auto;
     transition-delay: 0.3s;
 }
+
+
 h1 {
     text-align: center;
     margin-top: 100px;
 }
+
 img {
     max-width: 100%;
     display: block;
 }
+
 .flex {
     display: flex;
     flex-wrap: wrap;
