--- a/style.css
+++ b/style.css
@@ -7,15 +7,16 @@
 
 }
 
-body {
+html,body {
+    max-width: 100%;
     background: url(https://i.pinimg.com/originals/4a/aa/de/4aaade9c445949aeb401a28deff935f1.gif);
     background-attachment: fixed;
     background-size: cover;
+    background-position: center;
 }
 
 img {
-    display: block;
-    width: 100%;
+    max-width: 100%;
     height: 100%;
 }
 
@@ -103,7 +104,7 @@ nav ul li.btn:hover a {
 
 @media screen and(max-width:768px) {
     body {
-        max-width: 100vh;
-        max-height: 100vh;
+        width: 100%;
+        height: 100%;
     }
 }
