--- a/web-site/flexbox_grid/teste02/style.css
+++ b/web-site/flexbox_grid/teste02/style.css
@@ -27,7 +27,7 @@ display: block;
 text-decoration: none;
 font-size: 100px;
 font-weight: 400;
-color: white;
+color: rgb(243, 10, 10);
 }
 
 .hero header{
@@ -131,4 +131,22 @@ h1{
     background: rgb(255, 153, 0);
     text-align: center;
     font-size: 1.5rem;
+}
+
+
+#item-list {
+    background: rgba(128, 128, 128, 0.247);
+    padding: 15px;
+    margin: 10px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: justify;
+    border: none;
+    outline: none;
+    color: white;
+}
+
+#item-list h1{
+text-align: center;
 }
