--- a/web-react/danki/my-app/src/App.css
+++ b/web-react/danki/my-app/src/App.css
@@ -1,24 +1,12 @@
-.App {
+*{
+margin: 0;
+padding: 0;
+box-sizing: border-box;
+}
+
+h2{
+  margin-top: 50px;
+  font-size: 5rem;
+  font-weight: 300;
   text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
 }
