--- a/web-site/a/css/style.css
+++ b/web-site/a/css/style.css
@@ -3,6 +3,7 @@ body{
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
+    color: white;
 }
 
 a{
@@ -17,13 +18,10 @@ h1{
     flex-wrap: wrap; 
     align-items: center;
     justify-content: space-between;
-    color: blueviolet;
-   
 }
 .home ul{
     display:flex ;
     gap: 5px;
     list-style: none;
     font-size: large;
-
 }
