--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,8 +1,11 @@
+@import "/src/css/style.css"
+
+
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: monospace, sans-serif;
     color: white;
 
 }
