--- a/web-site/web-pro/style.css
+++ b/web-site/web-pro/style.css
@@ -3,7 +3,7 @@
     margin: 0;
     box-sizing: border-box;
     font-family: 'Franklin Gothic Medium', sans-serif;
-    text-decoration: none;
+    
     list-style: none;
     scroll-behavior: smooth;
 }
@@ -12,29 +12,44 @@
 
 
 
-body{
-  
-    background:linear-gradient(rgb(119, 0, 255),10rem, white);
+body {
+    background: linear-gradient(rgb(119, 0, 255), 10rem, white);
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
-   
+    margin: 10px;
+    padding: 10px;
+}
+
+#home img{
+    width: 100%;
+    height: 95%;
 }
 
 /*menu bar*/
-.main{
+.main {
     width: 1400px;
     max-width: 95%;
     margin: 0 auto;
 }
-.hero{
+
+.hero {
     position: relative;
 }
-header .logo a{
-   display: block;
-   font-size: 100px;
-   font-weight: 600;
-   color: aqua;
+table{
+    width: 500px;
+    background: rgba(0, 0, 0, 0.295);
+    text-align:left;
+    border: 1px solid rgb(243, 7, 7);
+    float: right;
+}
+
+
+header .logo a {
+    display: block;
+    font-size: 100px;
+    font-weight: 600;
+    color: aqua;
 }
 
 .hero header {
@@ -48,7 +63,7 @@ nav ul li {
     flex-wrap: wrap;
 }
 
-nav ul li a{
+nav ul li a {
     margin-left: 10px;
     font-size: 25px;
     font-weight: 100;
