--- a/web-site/web-sass/css/index.scss
+++ b/web-site/web-sass/css/index.scss
@@ -1,5 +1,9 @@
-@import './style'
+@import 'style'
+
+$text-color: rgb(248, 4, 4);
+$bg-color: rgb(70, 66, 66);
+
 
 body{
-
+color: $text-color;
 }
